Add guidance for git and GitHub
Not all teams in MoJ are familiar with Git. This is intended to be an
initial reference for teams to help over the learning hump. It can help
encourage conversations to get teams started with a workflow that fits
their context.

--- a/_config.yml
+++ b/_config.yml
@@ -8,3 +8,8 @@ defaults:
       path: "standards"
     values:
       standard: true
+  -
+    scope:
+      path: "guides"
+    values:
+      guide: true 
