--- a/_config.yml
+++ b/_config.yml
@@ -2,6 +2,9 @@ title: MOJ technical guidance
 
 permalink: pretty
 
+header_links:
+  GitHub: https://github.com/ministryofjustice/technical-guidance
+
 defaults:
   -
     scope:
