Migrate from cloud-platform-tech-docs-publisher to tech-docs-github-pages-publisher

--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -1,6 +1,7 @@
 name: Publish
 
 on:
+  workflow_dispatch:
   push:
     branches:
       - "main"
@@ -11,17 +12,8 @@ jobs:
   run:
     runs-on: ubuntu-latest
     container:
-      image: ministryofjustice/cloud-platform-tech-docs-publisher:1.1
+      image: ministryofjustice/tech-docs-github-pages-publisher:1.2
     steps:
     - uses: actions/checkout@v2
-    - name: Build
-      run: bundle exec middleman build --build-dir docs --relative-links
-      env:
-        ROOT_DOCPATH: /technical-guidance
-    - run: touch docs/.nojekyll
-    - run: git config --global user.email "tools@digital.justice.gov.uk"
-    - run: git config --global user.name "Github Action"
-    - run: git checkout -b gh-pages
-    - run: git add docs
-    - run: git commit -m "Published at $(date)"
-    - run: git push origin gh-pages --force
+    - name: Publish
+      run: /publishing-scripts/publish.sh
