Report to Slack if publish fails

--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -17,3 +17,12 @@ jobs:
     - uses: actions/checkout@v2
     - name: Publish
       run: /publishing-scripts/publish.sh
+    - name: Report failure to Slack
+      if: always()
+      uses: ravsamhq/notify-slack-action@v1
+      with:
+        status: ${{ job.status }}
+        notify_when: 'failure'
+        notification_title: 'Failed GitHub Action Run'
+      env:
+        SLACK_WEBHOOK_URL: ${{ secrets.SLACK_WEBHOOK_URL }}
