--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -12,11 +12,13 @@ jobs:
   run:
     runs-on: ubuntu-latest
     container:
-      image: ministryofjustice/tech-docs-github-pages-publisher:1.4
+      image: ministryofjustice/tech-docs-github-pages-publisher:1.5
     steps:
     - uses: actions/checkout@v3
-    - name: Publish
-      run: /publishing-scripts/publish.sh
+    - name: Publish to gh-pages
+      run: |
+        git config --global --add safe.directory ${GITHUB_WORKSPACE}
+        /publishing-scripts/publish.sh
     - name: Report failure to Slack
       if: always()
       uses: ravsamhq/notify-slack-action@v1
