--- a/.github/workflows/auto-review.yml
+++ b/.github/workflows/auto-review.yml
@@ -16,6 +16,7 @@ jobs:
       matrix:
         os: [ubuntu-latest]
 
+    if: ${{ github.actor != 'dependabot[bot]' }}
     steps:
       - name: Checkout PR code
         uses: actions/checkout@v3
