Use tech-doc-publisher v3 and fix broken links. Code format files.

--- a/.github/workflows/auto-review.yml
+++ b/.github/workflows/auto-review.yml
@@ -1,7 +1,6 @@
 name: Auto-approve date change only PR
 
-on:
-  pull_request
+on: pull_request
 
 env:
   PR_OWNER: ${{ github.event.pull_request.user.login }}
