✨Add global Slack config to enable Slack link in page review alerts

--- a/config/tech-docs.yml
+++ b/config/tech-docs.yml
@@ -33,3 +33,7 @@ prevent_indexing: true
 show_contribution_banner: true
 github_repo: ministryofjustice/technical-guidance
 github_branch: main
+
+# Slack options
+owner_slack_workspace: mojdt
+default_owner_slack: '#operations-engineering-alerts'
