use OPS_BOT_TOKEN in GH Action

--- a/.github/workflows/auto-review.yml
+++ b/.github/workflows/auto-review.yml
@@ -4,7 +4,7 @@ on: pull_request
 
 env:
   PR_OWNER: ${{ github.event.pull_request.user.login }}
-  GITHUB_OAUTH_TOKEN: ${{ secrets.OPERATIONS_ENGINEERING }}
+  GITHUB_OAUTH_TOKEN: ${{ secrets.GH_BOT_PAT_TOKEN }}
   TEAM_NAME: "operations-engineering"
 
 jobs:
@@ -36,11 +36,11 @@ jobs:
         id: approve_pr_check
         uses: ministryofjustice/cloud-platform-doc-checker@main
         env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          GITHUB_TOKEN: ${{ secrets.OPS_BOT_TOKEN }}
 
       - name: Approving PR
         uses: hmarr/auto-approve-action@v3
 
         if: steps.approve_pr_check.outputs.review_pr == 'true'
         with:
-          github-token: ${{ secrets.GITHUB_TOKEN }}
+          github-token: ${{ secrets.OPS_BOT_TOKEN }}
