--- a/.github/workflows/check-links.yml
+++ b/.github/workflows/check-links.yml
@@ -1,17 +1,29 @@
 name: Check for broken links
 
 on:
+  repository_dispatch:
   workflow_dispatch:
-  pull_request:
-    paths:
-      - "source/**"
+  schedule:
+    - cron: "5 2 * * 0-5"
 
 jobs:
-  check_links:
+  linkChecker:
     runs-on: ubuntu-latest
-    container:
-      image: ministryofjustice/tech-docs-github-pages-publisher:v3
     steps:
       - uses: actions/checkout@v3
-      - name: htmlproofer
-        run: /scripts/check-url-links.sh
+
+      - name: Link Checker
+        id: lychee
+        uses: lycheeverse/lychee-action@v1.7.0
+        with:
+          args: --verbose --exclude-mail --no-progress './**/*.md' './**/*.html' './**/*.erb' --accept 403,200,429
+        env:
+          GITHUB_TOKEN: ${{secrets.GITHUB_TOKEN}}
+
+      - name: Create Issue From File
+        if: env.lychee_exit_code != 0
+        uses: peter-evans/create-issue-from-file@v4
+        with:
+          title: Link Checker Report
+          content-filepath: ./lychee/out.md
+          labels: documentation
