--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -1,2 +1,1 @@
-
-*   @ministryofjustice/operations-engineering
+*   @ministryofjustice/operations-engineering @ministryofjustice/OCTO Engineering Leads
