--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -1,1 +1,1 @@
-*   @ministryofjustice/operations-engineering @ministryofjustice/OCTO Engineering Leads
+*   @ministryofjustice/operations-engineering @ministryofjustice/octo-engineering-leads
