Update publish.yml to skip sharepoint urls

--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -66,3 +66,4 @@ jobs:
           npx linkinator . --recurse --markdown \
             --skip https://technical-guidance.service.justice.gov.uk/images/govuk-large.png \
             --skip https://twitter.com/* \
+            --skip https://justiceuk.sharepoint.com/* \
