--- a/.mega-linter.yml
+++ b/.mega-linter.yml
@@ -27,16 +27,20 @@ LOG_LEVEL: INFO
 MARKDOWN_MARKDOWNLINT_FILE_EXTENSIONS:
   - .md
   - .md.erb
+  - .html.md.erb
 MARKDOWN_MARKDOWN_LINK_CHECK_DISABLE_ERRORS: true
 MARKDOWN_MARKDOWN_LINK_CHECK_FILE_EXTENSIONS:
   - .md
   - .md.erb
+  - .html.md.erb
 MARKDOWN_MARKDOWN_TABLE_FORMATTER_FILE_EXTENSIONS:
   - .md
   - .md.erb
+  - .html.md.erb
 MARKDOWN_REMARK_LINT_FILE_EXTENSIONS:
   - .md
   - .md.erb
+  - .html.md.erb
 PARALLEL: true
 SARIF_REPORTER: false
 SHOW_ELAPSED_TIME: true
