switch to regex matching

--- a/.mega-linter.yml
+++ b/.mega-linter.yml
@@ -24,23 +24,11 @@ FILEIO_REPORTER: false
 GITHUB_COMMENT_REPORTER: true
 GITHUB_STATUS_REPORTER: true
 LOG_LEVEL: INFO
-MARKDOWN_MARKDOWNLINT_FILE_EXTENSIONS:
-  - .md
-  - .md.erb
-  - .html.md.erb
+MARKDOWN_MARKDOWNLINT_FILTER_REGEX_INCLUDE: "(\\.(md|md\\.erb|html\\.md\\.erb)$)"
 MARKDOWN_MARKDOWN_LINK_CHECK_DISABLE_ERRORS: true
-MARKDOWN_MARKDOWN_LINK_CHECK_FILE_EXTENSIONS:
-  - .md
-  - .md.erb
-  - .html.md.erb
-MARKDOWN_MARKDOWN_TABLE_FORMATTER_FILE_EXTENSIONS:
-  - .md
-  - .md.erb
-  - .html.md.erb
-MARKDOWN_REMARK_LINT_FILE_EXTENSIONS:
-  - .md
-  - .md.erb
-  - .html.md.erb
+MARKDOWN_MARKDOWN_LINK_CHECK_FILTER_REGEX_INCLUDE: "(\\.(md|md\\.erb|html\\.md\\.erb)$)"
+MARKDOWN_MARKDOWN_TABLE_FORMATTER_FILTER_REGEX_INCLUDE: "(\\.(md|md\\.erb|html\\.md\\.erb)$)"
+MARKDOWN_REMARK_LINT_FILTER_REGEX_INCLUDE: "(\\.(md|md\\.erb|html\\.md\\.erb)$)"
 PARALLEL: true
 SARIF_REPORTER: false
 SHOW_ELAPSED_TIME: true
